--- a/index.html
+++ b/index.html
@@ -5,11 +5,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="css/style.css">
+    <link href="https://fonts.googleapis.com/css?family=Permanent+Marker&display=swap" rel="stylesheet">
     <title>Akatsuki</title>
 </head>
 <body>
     <nav>
-
+        <img src="img/Sharingan_Triple.png" alt="icon">
+        <a href="">Quem somos ?</a>
+        <a href="">Nossa Missão</a>
+        <a href="">Parceiros</a>
+        <a href="">Junte se a nos</a>
     </nav>
     <header>
 
@@ -21,7 +26,7 @@
 
     </aside>
     <footer>
-        
+
     </footer>
 </body>
 </html>
