--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <nav>
         <img src="img/Sharingan_Triple.png" alt="icon">
-        <a href="">Quem somos ?</a>
+        <a href="https://pt.wikipedia.org/wiki/Akatsuki" target="_blank">Quem somos ?</a>
         <a href="">Nossa Missão</a>
         <a href="">Parceiros</a>
         <a href="">Junte se a nos</a>
