--- a/index.html
+++ b/index.html
@@ -11,19 +11,21 @@
 <body>
     <nav>
         <img src="img/Sharingan_Triple.png" alt="icon">
-        <a href="https://pt.wikipedia.org/wiki/Akatsuki" target="_blank">Quem somos ?</a>
-        <a href="">Nossa Missão</a>
-        <a href="">Parceiros</a>
-        <a href="">Junte se a nos</a>
+        <a href="" target="_blank">私たちは誰ですか？</a>
+        <a href="">私たちの使命</a>
+        <a href="">パートナー</a>
+        <a href="">参加する</a>
     </nav>
     <header>
-
     </header>
     <section>
 
     </section>
     <aside>
-
+        <h2>私たちは誰ですか？</h2>
+        <p>戦争を終わらせ、忍の世界に平和をもたらしたが、最終的にはすべてのビジューを捕まえようとするmerc兵の組織になった架空の漫画とアニメの組織ナルト</p>
+        <p>
+            tsukiはかつて、最大10人の主要メンバーで構成されていました。これらのメンバーは、長門と港南を除き、それぞれの村のSランクの犯罪者でした。メンバーは常に2人でチームを組んでいますが、ゼツは例外です。ゼツは組織のスパイとして機能し、組織の利益のために独自の能力を利用しています。チームのメンバーは、相互に問題を抱えている場合もありますが、非常にうまく協力するか、少なくともタスクを遂行するのに十分に協力する必要があります。あるメンバーが7年ぶりに会ったと言ったとき、パートIの終わりに見られるように、組織はめったに完全に組み立てられません。</p>
     </aside>
     <footer>
 
