criar estrutura da section

--- a/index.html
+++ b/index.html
@@ -19,16 +19,21 @@
     <header>
     </header>
     <section>
-
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1661557.0031407834!2d138.67049387219174!3d35.57777373364333!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x605d1b87f02e57e7%3A0x2e01618b22571b89!2zVMOzcXVpbywgSmFww6Nv!5e0!3m2!1spt-BR!2sbr!4v1567608399974!5m2!1spt-BR!2sbr" width="100%" height="300" frameborder="0" style="border:0;" allowfullscreen=""></iframe>
+        <h2>参加する</h2>
+        <div>
+            <label for="">E-mail</label>
+            <input placeholder="Digite seu e-mail" type="E-mail">
+        </div>
     </section>
     <aside>
         <h2>私たちは誰ですか？</h2>
         <p>戦争を終わらせ、忍の世界に平和をもたらしたが、最終的にはすべてのビジューを捕まえようとするmerc兵の組織になった架空の漫画とアニメの組織ナルト</p>
         <p>
             tsukiはかつて、最大10人の主要メンバーで構成されていました。これらのメンバーは、長門と港南を除き、それぞれの村のSランクの犯罪者でした。メンバーは常に2人でチームを組んでいますが、ゼツは例外です。ゼツは組織のスパイとして機能し、組織の利益のために独自の能力を利用しています。チームのメンバーは、相互に問題を抱えている場合もありますが、非常にうまく協力するか、少なくともタスクを遂行するのに十分に協力する必要があります。あるメンバーが7年ぶりに会ったと言ったとき、パートIの終わりに見られるように、組織はめったに完全に組み立てられません。</p>
-    </aside>
-    <footer>
-
-    </footer>
-</body>
-</html>
+        </aside>
+        <footer>
+            
+        </footer>
+    </body>
+    </html>
